--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   shared_preferences: ^2.0.5
   dropdown_button2: ^1.7.2
+  image_picker: ^0.8.7+1
+  place_picker: ^0.9.18
+  intl: 0.17.0
+  date_picker_timeline: ^1.2.3
 
 
 dev_dependencies:
